--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=Billing
 server.port=9090
 
-spring.datasource.url=jdbc:mysql://localhost:3306/billingDb
-spring.datasource.username=root
-spring.datasource.password=Ritik@123
+spring.datasource.url=${MySQL_RAILWAY_PUBLIC_URL}
+
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -12,4 +11,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql:true
+spring.jpa.properties.hibernate.format_sql=true
